--- a/apollo/package.json
+++ b/apollo/package.json
@@ -7,13 +7,16 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.51",
     "apollo-client": "^2.3.7",
+    "apollo-client-preset": "^1.0.8",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-server-express": "^1.4.0",
+    "graphql-tag": "^2.9.2",
     "graphql-tools": "^3.0.5",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.4.1",
+    "react-apollo": "^2.1.9",
     "react-dom": "^16.4.1"
   }
 }
