--- a/apollo/package.json
+++ b/apollo/package.json
@@ -14,6 +14,7 @@
     "graphql-server-express": "^1.4.0",
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^3.0.5",
+    "lodash": "^4.17.10",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.4.1",
     "react-apollo": "^2.1.9",
